@@ -1,20 +1,0 @@
-  .text
-  .global  __EH_FRAME_BEGIN__
-  .global  _CRT_MT
-  .global __gthread_once
-  .global abort
-  .global GetCurrentThreadId
-  .global TlsFree
-  .global TlsAlloc
-  .global __mingwthr_key_dtor
-  .global atexit
-
-__EH_FRAME_BEGIN__:
-_CRT_MT:
-__gthread_once:
-abort:
-GetCurrentThreadId:
-TlsFree:
-TlsAlloc:
-__mingwthr_key_dtor:
-atexit:
